<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="vn.edu.uit.realtimeuseraccountmanager.ui.fragments.profile.FragmentProfileListener" />
    </data>

    <RelativeLayout
        android:id="@+id/fragment_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back"
            android:onClick="@{listener::onBackPressed}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/btn_back"
            android:layout_alignParentBottom="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile_avatar"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/ic_no_avatar"
                android:onClick="@{listener::onChoosePhotoPressed}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintBottom_toTopOf="@id/btn_accept"
                app:layout_constraintTop_toBottomOf="@id/img_profile_avatar">

                <TextView
                    android:id="@+id/textview_lb_name"
                    style="@style/AppTheme.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edittext_name"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_edittext_size_height"
                    android:background="@drawable/border_w_1dp_grey"
                    android:gravity="center|start"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textview_lb_birthday"
                        style="@style/AppTheme.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/birthday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edittext_birthday"
                        style="@style/AppTheme.EditText"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/input_edittext_size_height"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/border_w_1dp_grey"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center|start"
                        android:hint="@string/format_dmy"
                        android:onClick="@{listener::onBirthDayPress}"
                        app:layout_constraintEnd_toEndOf="@id/guideLine_vertical_sixty_percent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_lb_birthday" />

                    <TextView
                        android:id="@+id/textview_lb_gender"
                        style="@style/AppTheme.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/gender"
                        app:layout_constraintStart_toStartOf="@id/edittext_gender"
                        app:layout_constraintTop_toTopOf="parent" />

                    <AutoCompleteTextView
                        android:id="@+id/edittext_gender"
                        style="@style/AppTheme.EditText"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/input_edittext_size_height"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/border_w_1dp_grey"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_down"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center|start"
                        android:hint="@string/gender"
                        android:onClick="@{listener::onGenderPress}"
                        android:text="@string/male"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/guideLine_vertical_sixty_percent"
                        app:layout_constraintTop_toTopOf="@id/edittext_birthday" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideLine_vertical_sixty_percent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.55" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textview_lb_address"
                    style="@style/AppTheme.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edittext_address"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_edittext_size_height"
                    android:background="@drawable/border_w_1dp_grey"
                    android:gravity="center|start"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_lb_email"
                    style="@style/AppTheme.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edittext_email"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_edittext_size_height"
                    android:background="@drawable/border_w_1dp_grey"
                    android:gravity="center|start"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine_btn_accept_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine_btn_accept_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_accept"
                style="@style/AppTheme.Button"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_margin="10dp"
                android:onClick="@{listener::onAcceptPress}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideLine_btn_accept_right"
                app:layout_constraintStart_toStartOf="@id/guideLine_btn_accept_left" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/view_wait_for_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/textview_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progress_loading"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserratmedium"
                android:gravity="center"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </RelativeLayout>
</layout>
